--- a/src/static/style/navbar.css
+++ b/src/static/style/navbar.css
@@ -28,7 +28,7 @@ body {
 }
 
 .navbar {
-    background: linear-gradient(to right, #2563eb, #4f46e5);
+    background: linear-gradient(to right, #55a6e0, #8680f5);
     color: white;
     padding: 1rem 2rem;
     position: fixed;
