--- a/src/static/style/navbar.css
+++ b/src/static/style/navbar.css
@@ -75,7 +75,7 @@ body {
   
   .search-button {
     margin-left: 8px;
-    background: #facc15;
+    background: #efd465;
     color: black;
     border: none;
     padding: 5px 12px;
@@ -85,7 +85,7 @@ body {
   }
   
   .search-button:hover {
-    background: #f59e0b;
+    background: #e9b151;
   }
   
   .navbar-link {
