--- a/src/static/style/addCategory.css
+++ b/src/static/style/addCategory.css
@@ -1,4 +1,4 @@
-.add-category-page{
+/* .add-category-page{
     max-width: 600px;
     margin: 50px auto;
     padding: 20px;
@@ -28,4 +28,4 @@
 }
 .category-form button:hover{
     background-color: #c4803c;
-}
+} */
