--- a/src/static/style/adminCategoryPage.css
+++ b/src/static/style/adminCategoryPage.css
@@ -1,4 +1,4 @@
-.admin-category-page {
+/* .admin-category-page {
     max-width: 800px;
     margin: 0 auto 50px auto;
 }
@@ -47,4 +47,4 @@
 }
 .admin-bt .admin-btn-edit{
     background-color: #f68b1e;
-}
+} */
