--- a/src/static/style/adminProduct.css
+++ b/src/static/style/adminProduct.css
@@ -1,4 +1,4 @@
-.admin-product-list{
+/* .admin-product-list{
     align-items: center;
     width: 50%;
     margin: auto;
@@ -50,4 +50,4 @@
 }
 .admin-product-list button{
     margin-left: 10px;
-}
+} */
