--- a/src/static/style/addProduct.css
+++ b/src/static/style/addProduct.css
@@ -1,4 +1,4 @@
-.product-form {
+/* .product-form {
     display: flex;
     flex-direction: column;
     width: 50%;
@@ -91,4 +91,4 @@
 
 .item-badge:hover {
     background-color: #0056b3;
-}
+} */
