--- a/src/static/style/adminPage.css
+++ b/src/static/style/adminPage.css
@@ -5,7 +5,7 @@
 
 .sidebar {
     width: 250px;
-    background: linear-gradient(to right, #55a6e0, #8680f5);
+    background: linear-gradient(to right, #cf9748,#f89058);
     color: #fff;
     padding: 20px;
     position: fixed;
