add UI forgot-password

--- a/src/static/style/navbar.css
+++ b/src/static/style/navbar.css
@@ -5,6 +5,7 @@ body {
 }
 
 .navbar {
+  max-width: calc(100% - 17px);
   background: linear-gradient(135deg, #f68b1e, #ff9f43);
   color: white;
   padding: 0;
